--- a/src/Header.css
+++ b/src/Header.css
@@ -1,4 +1,35 @@
 
+
+.header{
+    display: flex;
+    padding: 10px 20px;
+    justify-content: space-around;
+
+    position: sticky;
+    background: white;
+    z-index: 100;
+    top: 0;
+    box-shadow: 0px 5px 8px -9px rgb(113, 105, 105);
+}
+
+.header_left{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.header_input{
+    display: flex;
+    align-items: center;
+    background: rgb(232, 232, 232);
+    padding: 10px;
+    border-radius: 999px;
+}
 .header_left >img{
     height: 40px;
+}
+
+.header_input > input{
+    border: none;
+    outline-width: 0;
+    background-color: transparent;
 }
